--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
           <div class="button__container">
             <button class="button button__send" type="submit" disabled>Enviar</button>
-            <button class="button button__clear" type="button">limpiar</button>
+            <button class="button button__clear" type="button">Limpiar</button>
           </div>
         </form>
       </section>
