--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <footer>
       <img class="header__logo" src="./assets/logo3.png" alt="Logo aluraGeek" />
-      <p class="dev__info">Mika Rodríguez</p>
+      <p class="own__info">Mika Rodríguez</p>
       <span class="company__info">Alura Latam 2024</span>
     </footer>
 
